--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 body {
+    font-family:'Times New Roman', Times, serif;
     margin:0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
     overflow:scroll;
-    flex: auto;
-
+    min-width: fit-content;
 }
+
 
 .header{
     background-color: #1f2937;
     padding:16px;
     display:flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .box{
@@ -52,9 +54,16 @@ p {
     flex-wrap: wrap;
 }
 
-button{
+.intro button{
     display:flex;
     flex-direction: row;
+    background-color: #3882f6;
+    color: whitesmoke;
+    font-weight: 900;
+    border-radius: 6px;
+    padding: 5px 15px 5px 15px;
+    border-style: none;
+    margin-top: 10px;
 }
 
 .intro{
@@ -82,8 +91,67 @@ button{
     gap: 10px;
     text-align: center;
     gap:50px;
+    padding-bottom: 50px;
+    
 }
 
 .text{
     width: 150px;
 }
+
+.quote{
+    background-color:#e5e7eb;
+    text-align: center;
+    color:#1f2937;
+    font-size: 30px;
+    font-weight:lighter;
+    font-style: italic;
+    padding: 70px 150px 70px 150px;
+   
+}
+
+.author{
+    font-size:20px;
+    font-weight: bolder;
+    text-align: end;
+    font-style: normal;
+}
+
+.sign-up{
+    background-color: #3882f6;
+    color: #e5e7eb;
+    font-size:12px;
+    padding: 20px 50px 20px 50px;
+    border-radius: 5px;
+    margin:60px 100px 60px 100px; 
+    flex:0 0 1;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.sign-up button{
+    background-color: #3882f6;
+    font-size: small;
+    color: #e5e7eb;
+    font-weight: 900;
+    border-color: white;
+    border-radius: 6px;
+    border-style: solid;
+    padding: 0px 15px 0px 15px;
+
+}
+
+ .call{
+    font-size: 18px;
+    font-weight: 800;
+ }
+
+ .footer {
+    background-color: #1f2937;
+    font-size: 12px;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px 20px 40px;
+ }
